AA-2008-12-18-0: Bugfix:     o adjusting issue_2459 test
                 Bugster:    6784655 
                 Issue:      2832
                 Review:     MD

MG-2008-12-18-0: Enhancem.:  Test for issue 609 added
                 Review:     ?

CR-2008-12-18-0: Bugfix:     checktree/upgrade_test:
                             Upgrade test answered with yes to re-create csp
                             certificates, but did not copy it to all execds
                             and submit hosts. Therfore the test failed on csp
                             testsuite installations.
                 Review:     MD

CR-2008-12-17-1: Cleanup:    changed logging level from fine to finer in
                             set_config_and_propagate()

AP-2008-12-16-0: Bugfix:     o Use unified method to leave testsuite menus with
                               "OK" or "Cancel"
                             o adjusting issue_2459 test
                 Issue:      248
                 Review:     CR

CR-2008-12-17-0: Enhancem.:  o rework of error reporting for issue test 2459
                             o disabled 2 scenarios in functional/enforce_limits
                               tests which are failing because of CR 6786247
                             o soft_execd_shutdown() now supports a list of
                               execds which should be shutdown
                 Review:     EB

CR-2008-12-16-0: Enhancem.:  o pe_job.sh (master task script) now supports
                               additional sleep parameter
                             o tight_integration test:
                               - now does a workaround for open CR 6728379 
                                 and reports info email about this.
                                 The workaround is to add a sleep 10
                                 to the master task job script. 
                               - use new feature of get_qacct() procedure