@@ -1,3 +1,7 @@
+RD-2008-12-19-0: Bugfix:     added test if TMPDIR is cleaned after a tight
+                             integration job exited
+                 Review:     CR
+
 AA-2008-12-18-0: Bugfix:     o adjusting issue_2459 test
                  Bugster:    6784655 
                  Issue:      2832
